@@ -362,7 +362,8 @@ enum spi_dev_e
   SPIDEV_AUDIO_DATA,  /* Select SPI audio codec device data port */
   SPIDEV_AUDIO_CTRL,  /* Select SPI audio codec device control port */
   SPIDEV_EEPROM,      /* Select SPI EEPROM device */
-  SPIDEV_GSENSOR      /* Select SPI Accelerometer device */
+  SPIDEV_GSENSOR,     /* Select SPI Accelerometer device */
+  SPIDEV_BAROMETER    /* Select SPI Pressure/Barometer device */
 };
 
 /* Certain SPI devices may required differnt clocking modes */
